# Laba-19

./: CMakeLists.txt  main.c
algorithms/task/: convert_float.h  evaluate_expression.h  filter_word.h  get_best_team.h  leave_longest_word.h  matrix_transposition.h  rearrange_numbers.h  remove_true_polynomial.h  transpose_non_symmetric_matrix.h  update_product.h
data_structures/: CMakeLists.txt
data_structures/matrix/: matrix.c  matrix.h
data_structures/string/: string_.c  string_.h
data_structures/string/task/: balance_string.h  change_word_order.h  counter_palindrome_word.h  find_anagram_words.h  find_duplicate_words.h  find_last_common_word.h  find_preceding-word.h  get_word_before_first_word_with_a.h  get_word_except_last.h  letters_belong_string.h  lexicographical_order.h  print_revers_ordered.h  rearranging_words.h  remove_adjacent_equal_letters.h  remove_non_letters.h  remove_palindrome_word.h  replace_digit_to_space.h  replace_word_to_word.h  reverse_word.h
data_structures/vector/: vector.c  vector.h
data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
